--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,8 +1,8 @@
 {
     "about_me": "About Me",
-    "paragraph1": "I'm a passionate Full Stack Developer with a strong foundation in modern web technologies. My journey in software development combines academic knowledge with hands-on experience, enabling me to deliver high-quality, scalable solutions.",
-    "paragraph2": "As a freelancer, I've had the privilege of working with diverse clients, building everything from elegant business websites to complex full-stack applications. My previous internship experience has refined my ability to work in team environments and deliver projects on time.",
-    "paragraph3": "I believe in writing clean, maintainable code and staying current with the latest industry trends. My approach combines technical expertise with strong problem-solving skills to create web experiences that truly make a difference.",
+    "paragraph1": "I'm Yuval, a Full Stack Developer passionate about building modern web experiences. I create clean, fast, and scalable web applications that are both functional and enjoyable to use.",
+    "paragraph2": "As a freelancer, I've worked with diverse clients, building everything from elegant business websites to complex full-stack applications. My previous internship experience sharpened my teamwork skills and ability to deliver projects on time.",
+    "paragraph3": "I believe in writing maintainable code and staying up-to-date with the latest technologies. I combine technical expertise with problem-solving skills to craft web experiences that make a real impact.",
     "hero_text": "Building modern web experiences and technological solutions that drive business growth",
     "view_work": "View Work",
     "contact_me": "Contact Me",
