--- a/src/locales/he/translation.json
+++ b/src/locales/he/translation.json
@@ -1,8 +1,8 @@
 {
     "about_me": "קצת עליי",
-    "paragraph1": "אני מפתח Full Stack נלהב עם בסיס חזק בטכנולוגיות ווב מודרניות. המסע שלי בפיתוח תוכנה משלב ידע אקדמי עם ניסיון מעשי, ומאפשר לי לספק פתרונות איכותיים ומדרגיים.",
-    "paragraph2": "כפרילנסר, זכיתי לעבוד עם לקוחות מגוונים, בבניית כל דבר מאתרי עסקים אלגנטיים ועד אפליקציות full-stack מורכבות. ניסיון ההתמחות הקודם שלי חידד את היכולת שלי לעבוד בצוות ולהגיש פרויקטים בזמן.",
-    "paragraph3": "אני מאמין בכתיבת קוד נקי, ניתן לתחזוקה והישארות מעודכן עם מגמות התעשייה האחרונות. הגישה שלי משלבת מומחיות טכנית עם כישורי פתרון בעיות חזקים כדי ליצור חוויות ווב שמשנות באמת.",
+    "paragraph1": "אני יובל, מפתח Full Stack עם תשוקה אמיתית לעולם הווב. לאחרונה השתחררתי מצה״ל, אחרי חמש שנים משמעותיות כלוחם — תקופה שחיזקה את הנחישות, עבודת הצוות והעמידה באתגרים. בעולם הפיתוח, אני נמשך לחיבור בין יצירתיות לטכנולוגיה: לקחת רעיון ולהפוך אותו למוצר מהיר, אסתטי ונקי.",
+    "paragraph2": "כפרילנסר עבדתי עם לקוחות מגוונים — מעסקים קטנים ועד אפליקציות full-stack מורכבות. ההתמחות שלי חיזקה את היכולת לעבוד בצוות ולהגיש פרויקטים בזמן ובאיכות גבוהה.",
+    "paragraph3": "אני מאמין בקוד נקי וניתן לתחזוקה, ועוקב אחרי מגמות וטכנולוגיות חדשות. אני משלבת מומחיות טכנית עם פתרון בעיות כדי ליצור חוויות ווב שממש משפיעות.",
     "hero_text": "בניית חוויות ווב מודרניות ופתרונות טכנולוגיים שמניעים את הצמיחה העסקית",
     "view_work": "מה אני מציע",
     "contact_me": "צור קשר",
