--- a/src/locales/he/translation.json
+++ b/src/locales/he/translation.json
@@ -50,5 +50,7 @@
     "whatsapp": "שיחה בוואטצאפ",
     "linkedin": "פרופיל לינקדאין",
     "phone_number": "058-517-1100",
-    "send_message": "שלח/י הודעה"
+    "send_message": "שלח/י הודעה",
+    "clients": "הלקוחות שלי",
+    "clients_text": "אנשים ומותגים שזכיתי לעבוד איתם"
 }
